# lattes-integration

./: .gitignore
pipeline-etl/: README.md  pyproject.toml
pipeline-etl/data-storage/01-bronze/lattes/17052026/areas_atuacao/: areas_atuacao_17052026.parquet
pipeline-etl/data-storage/01-bronze/lattes/17052026/formacoes/: formacoes_17052026.parquet
pipeline-etl/data-storage/01-bronze/lattes/17052026/pesquisadores/: pesquisadores_17052026.parquet
pipeline-etl/data-storage/01-bronze/open-alex/17052026/authors/: authors_17052026.parquet
pipeline-etl/data-storage/01-bronze/open-alex/22052026/authors/: authors_22052026.parquet
pipeline-etl/data-storage/01-bronze/open-alex/24052026/works/: works_24052026.parquet
pipeline-etl/data-storage/02-silver/lattes/24052026/pesquisadores/: pesquisadores_24052026.parquet
pipeline-etl/data-storage/02-silver/open-alex/17052026/authors/: authors_17052026.parquet
pipeline-etl/data-storage/02-silver/open-alex/22052026/authors/: authors_22052026.parquet
pipeline-etl/data/bronze/pesquisadores_xml/: 1608472474770322.xml  1966167015825708.xml  3633682231940138.xml  4436012961948689.xml  4940207771377721.xml  5601958689947032.xml  6716225567627323.xml  7401907691814937.xml
pipeline-etl/scripts/: utils.py
pipeline-etl/scripts/lattes/: pesquisadores_bronze_to_silver.py  pesquisadores_landing_to_bronze.py  utils_pesquisadores.py
pipeline-etl/scripts/open-alex/authors/: authors_api_to_bronze.py  authors_bronze_to_silver.py
pipeline-etl/scripts/open-alex/works/: works_api_to_bronze.py  works_bronze_to_silver.py
(+3 files in other folders)
