[project]
name = "pipeline-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "prefect>=3.7.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "xmltodict>=1.0.4",
]
